<resources>
    <string name="app_name">Olmaredo Stego</string>
    <string name="decodebt">Decode</string>
    <string name="photo">Photo</string>
    <string name="encodePick">Enter the message you want to hide or </string>
    <string name="pickFile">Open Text File</string>
    <string name="intensity">Set intensity of embedding.\nThe higher you choose, the worse it will be.</string>
    <string name="encode">Encode</string>
    <string name="select">Select image</string>
    <string name="hint">Input message here or -></string>
    <string name="info">"Steganography is a technique with the ambition to conceal secret information into other information apparently innocuous. Regarding this app, it uses spread spectrum steganography applied to images.

The basic workflow is the following:
1. Open the app and pore over the INFO tab
2. Tap on ENCODE
3. Choose an image
4. Type the message or open a text file containing it
5. Launch the process
6. Copy the decoding key in the clipboard

Now, in order to your homie to read the glorious pun you just encoded, you have to send him the processed image alongside the decoding key.
Keep in mind that the image MUST NOT be compressed in any way, otherwise the information will be lost! With default setting the image shouldn't be compressed by popular messaging application like Whastapp. But this isn't true anymore stepping up the resolution in the SETTING tab.

This is what your bro has to do:
1. Tap the DECODE tab
2. Go to the INFO tab, read it, and then tap back again on DECODE
3. Choose the received image containing the message
4. Paste the key, without white spaces or other things
5. Start the decode process
6. The message will pop up below and will be possible to copy it

If you aren't color blind, you might enjoy encoding messages into color images, just enable the color mode in SETTING. Moreover will be possible to include three times the information than in black and white, but the computation time will be longer as well.


This app origins from the assignment for the Multimedia Apps and Future Internet course of the University of Genoa, Electronic Engineering and Information Technology.
The work is completely open source, you can find the source code following the link that is in the Play Store somewhere or just look for OlimexSmart on GitHub.

<a href="http://htmlpreview.github.io/?https://raw.githubusercontent.com/olimexsmart/Olmaredo-Stego/master/privacy-policy.html">Privacy Policy</a>"
    </string>

    <string name="selectimagehides">Select the image that hide the message.</string>
    <string name="selectwichsignature">Enter the signature you want ot use.\nThe default signature is generic and suitable for all kind of natural image, but you can use a more specific one.</string>

    <string name="clipboard">Copy key</string>
    <string name="clipboardText">Copy Message</string>

    <string name="result">Result</string>
    <string name="calorOnOff">Color</string>
    <string name="colorDescription">Choose whenever or not encode images in color</string>
    <string name="enterMessage">Enter the message you want to hide.\nYou can write it here:</string>
    <string name="radioOriginal">Original</string>
    <string name="radioStandard">Generic</string>
    <string name="hintSignature">Password</string>
    <string name="px4">4 pixel</string>
    <string name="px8">8 pixel</string>
    <string name="px16">16 pixel</string>
    <string name="buttonSaveSetting">Save settings</string>
    <string name="heightImage">Define the length shorter edge of the image once it has been cropped."</string>
    <string name="heightImageBig">Image shorter dimension</string>
    <string name="blockSetting">Define the dimension in pixel of the block used in the steganographic method.</string>
    <string name="blockSettingBig">Block dimension</string>
    <string name="encSelect">Select the image.\nYou can choose an existing file or make a new photograph.</string>
    <string name="encSelectBig">Image</string>
    <string name="encMessageBig">Message</string>
    <string name="encOpenFile">… or open a text file</string>
    <string name="encIntensity">Intensity</string>
    <string name="encIntensitySettings">A higher encoding intensity ensures less errors, but the encoding artifacts become noticeable</string>
    <string name="encPercentage">0%</string>
    <string name="decSignatureBig">Signature</string>
    <string name="decSelect">Select image</string>
    <string name="decSelectBig">Image</string>
    <string name="tvKeyHint">Create a key</string>
    <string name="tvMessageHint">Enter text to hide</string>
    <string name="imageContext">image picker choose image from gallery or take a photo</string>

</resources>
